adjust images handler and swagger
